<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roboticarm.MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView_angle_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_alignParentEnd="true"
        android:textColor="#19266E"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />


    <TextView
        android:id="@+id/textView_strength_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_angle_right"
        android:layout_marginTop="1dp"
        android:text="@string/_0p"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:textColor="#19266E"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="0dp" />

    <TextView
        android:id="@+id/textView_coordinate_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_strength_right"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:text="@string/x050_x050"
        android:textColor="#19266E"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true" />


    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystickView_right"
        android:layout_width="395dp"
        android:layout_height="391dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        app:JV_backgroundColor="#3F51B5"
        app:JV_borderColor="#19266E"
        app:JV_borderWidth="8dp"
        app:JV_buttonColor="#FAC80E00"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="173dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/button_reset"
        android:layout_toRightOf="@+id/button_reset"
        android:text="@string/mode"
        android:textAllCaps="true"
        app:backgroundTint="#19266E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_reset"
        app:layout_constraintTop_toTopOf="@+id/button_reset" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="185dp"
        android:layout_height="89dp"
        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/reinitialiser"
        android:textAllCaps="true"
        app:backgroundTint="#19266E"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <SeekBar
        android:id="@+id/seekBar_rotation"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="386dp"
        android:layout_height="35dp"
        android:layout_above="@+id/button_reset"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:max="180"
        android:min="-180"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_angle"
        android:layout_alignEnd="@+id/seekBar_rotation"
        android:layout_alignRight="@+id/seekBar_rotation"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/position_poignet"
        android:textAllCaps="true"
        android:textColor="#19266E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_rotation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_angle"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_rotation"
        android:layout_alignEnd="@+id/seekBar_rotation"
        android:layout_alignRight="@+id/seekBar_rotation"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-4dp"
        android:gravity="center"
        android:text="@string/_0d"
        android:textAllCaps="true"
        android:textColor="#19266E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_rotation"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_rotation"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="346dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/reglages"
        android:textAllCaps="true"
        app:backgroundTint="#141833"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="@+id/button_reset" />
</RelativeLayout>
